# KidsRoom-SQLite-

./: .gitignore  CMakeLists.txt  KidsRoom(sql)_.sln  KidsRoom(sql)_.vcxproj  KidsRoom(sql)_.vcxproj.filters  listOfToys.txt  main  main.cpp  notes.sql  part_of_code_sql.txt  readme.txt
DataBase/: database.cpp  database.h
KidsRoom(sql)_/x64/Debug/: KidsRoom(sql)_.exe.recipe  vc143.idb
KidsRoom(sql)_/x64/Debug/KidsRoom(sql)_.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  KidsRoom(sql)_.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Toys/: Ball.cpp  Ball.h  Car.cpp  Car.h  Cube.cpp  Cube.h  Doll.cpp  Doll.h  Toy.cpp  Toy.h  Toys.h  ToysRoom.cpp  ToysRoom.h
UserInterface/: userinterface.cpp  userinterface.h
Utils/: Utils.cpp  Utils.h
database/: example.db
sqlite3/: sqlite3.lib
